<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="378dp"
        android:layout_gravity="top"
        android:layout_weight="1"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/screenTouchCount"
            android:layout_width="17dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.227"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/touchesName"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/pressName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/strikesName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.867"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.071" />

        <TextView
            android:id="@+id/btnPressedCount"
            android:layout_width="31dp"
            android:layout_height="22dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="320dp"
            android:text="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pressName"
            app:layout_constraintVertical_bias="0.035" />

        <TextView
            android:id="@+id/strikeView"
            android:layout_width="53dp"
            android:layout_height="19dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/strikeView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.147" />

        <TextView
            android:id="@+id/strikeValue"
            android:layout_width="44dp"
            android:layout_height="26dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/strikeView"
            app:layout_constraintVertical_bias="0.045" />

        <TextView
            android:id="@+id/touchesName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/touchesName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.144"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.071" />


</android.support.constraint.ConstraintLayout>

    <FrameLayout
        android:id="@+id/touchMe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <Button
            android:id="@+id/buttonLeft"
            android:layout_width="148dp"
            android:layout_height="131dp"
            android:layout_gravity="left|center_vertical"
            android:onClick="onClick"
            android:text="@string/btnName" />

        <Button
            android:id="@+id/buttonCenter"
            android:layout_width="148dp"
            android:layout_height="125dp"
            android:layout_gravity="center"
            android:onClick="onClick"
            android:text="@string/btnName" />

        <Button
            android:id="@+id/button-left"
            android:layout_width="148dp"
            android:layout_height="131dp"
            android:layout_gravity="right|center_vertical"
            android:onClick="onClick"
            android:text="@string/btnName" />
    </FrameLayout>


</LinearLayout>
